# early-stopping

./: README.md  pyproject.toml
early_stopping/: EarlyStopping.py
src/early_stopping/: EarlyStopping.py
