[project]
name = "early-stopping"
version = "0.0.2"
authors = [
  { name = "Bjarte Mehus Sunde" },
  { name = "Douwe den Blanken" }
]
description = "Utility to perform early stopping during neural network training"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["machine learning", "ml", "ai", "pytorch", "python", "tensorflow", "utilities"]
dependencies = [
  'numpy'
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
"Homepage" = "https://github.com/V0XNIHILI/early-stopping"
"Bug Tracker" = "https://github.com/V0XNIHILI/early-stopping/issues"